--- a/landing_Page/index.html
+++ b/landing_Page/index.html
@@ -248,13 +248,13 @@
               </p>
               <div class="card-img">
                 <div class="card-img__image">
-                  <img src="/img/h1.png" alt="Brand img" />
+                  <img src="img/h1.png" alt="Brand img" />
                 </div>
                 <div class="card-img__image">
-                  <img src="/img/h1_2.png" alt="Brand img" />
+                  <img src="img/h1_2.png" alt="Brand img" />
                 </div>
                 <div class="card-img__image">
-                  <img src="/img/h1_3.png" alt="Brand img" />
+                  <img src="img/h1_3.png" alt="Brand img" />
                 </div>
               </div>
               <div class="progressbar__container">
