--- a/landing_Page/index.html
+++ b/landing_Page/index.html
@@ -236,7 +236,7 @@
                 <a href="#" class="slp-btn slp-mr-8 slp-btn-primary">Get tree trial</a>
                 <button type="button" class="slp-btn slp-btn-tertiary">
                   What is GitLab?
-                  <img src="img/icon1.svg" />
+                  <img src="./img/icon1.svg" />
                 </button>
               </div>
             </div>
@@ -248,13 +248,13 @@
               </p>
               <div class="card-img">
                 <div class="card-img__image">
-                  <img src="/img/h1.png" alt="Brand img" />
+                  <img src="./img/h1.png" alt="Brand img" />
                 </div>
                 <div class="card-img__image">
-                  <img src="/img/h1_2.png" alt="Brand img" />
+                  <img src="./img/h1_2.png" alt="Brand img" />
                 </div>
                 <div class="card-img__image">
-                  <img src="/img/h1_3.png" alt="Brand img" />
+                  <img src="./img/h1_3.png" alt="Brand img" />
                 </div>
               </div>
               <div class="progressbar__container">
@@ -286,22 +286,22 @@
           <div class="customer-logos__companies slp-flex">
             <h2 class="slp-my-24 customer-logos__trusted-by slp-text-heading5">"Trusted By"</h2>
             <a href="#">
-              <img src="/img/icon2.svg">
+              <img src="./img/icon2.svg">
             </a>
             <a href="#">
-              <img src="img/icon3.svg">
+              <img src="./img/icon3.svg">
             </a>
             <a href="#">
-              <img src="img/icon4.svg">
+              <img src="./img/icon4.svg">
             </a>
             <a href="#">
-              <img src="img/icon5.svg">
+              <img src="./img/icon5.svg">
             </a>
             <a href="#">
-              <img src="img/icon6.svg">
+              <img src="./img/icon6.svg">
             </a>
             <a href="#">
-              <img src="img/icon7.svg">
+              <img src="./img/icon7.svg">
             </a>
           </div>
         </div>
@@ -368,7 +368,7 @@
                   <a class="case-study-quote__link">
                     <div class="slp-row case-study-quote logo">
                       <div class="case-study-quote__main-img slp-col-md-3">
-                        <img src="/img/icon7.svg" width="250px" height="80px">
+                        <img src="./img/icon7.svg" width="250px" height="80px">
                       </div>
                       <div class="slp-col-md-8">
                         <div class="case-study-quote__title-img"></div>
@@ -398,7 +398,7 @@
         <div class="container solutions-container__container">
           <div class="slp-row solutions-container__header">
             <h2 class="slp-text-heading2-bold" style="margin-top: 50px">One platform, one team</h2>
-            <img src="/img/h2.png" class="slp-my-48">
+            <img src="./img/h2.png" class="slp-my-48">
             <div class="solutions-container__text-container">
               <p class="slp-text-body1-bold">Whether you're starting by integrating a few point solutions,
                 or simplifying your entire toolchain, now you can do it as one team in one platform.
@@ -436,7 +436,7 @@
                   </div>
                   <div class="slp-col-md-7">
                     <div class="solutions-item__media aos-init aos-animate">
-                      <img src="img/h3.png" class="solutions-item__media__image">
+                      <img src="./img/h3.png" class="solutions-item__media__image">
                     </div>
                   </div>
                 </div>
@@ -458,7 +458,7 @@
                   </div>
                   <div class="slp-col-md-7">
                     <div class="solutions-item__media aos-init aos-animate">
-                      <img src="img/h4.png" class="solutions-item__media__image">
+                      <img src="./img/h4.png" class="solutions-item__media__image">
                     </div>
                   </div>
                 </div>
@@ -481,7 +481,7 @@
                   </div>
                   <div class="slp-col-md-7">
                     <div class="solutions-item__media aos-init aos-animate">
-                      <img src="img/h5.png" class="solutions-item__media__image">
+                      <img src="./img/h5.png" class="solutions-item__media__image">
                     </div>
                   </div>
                 </div>
@@ -504,7 +504,7 @@
                   </div>
                   <div class="slp-col-md-7">
                     <div class="solutions-item__media aos-init aos-animate">
-                      <img src="img/h6.png" class="solutions-item__media__image">
+                      <img src="./img/h6.png" class="solutions-item__media__image">
                     </div>
                   </div>
                 </div>
@@ -527,7 +527,7 @@
                   </div>
                   <div class="slp-col-md-7">
                     <div class="solutions-item__media aos-init aos-animate">
-                      <img src="img/h7.png" class="solutions-item__media__image">
+                      <img src="./img/h7.png" class="solutions-item__media__image">
                     </div>
                   </div>
                 </div>
@@ -546,11 +546,11 @@
         </h2>
         <div class="tablist">
           <button id="tab-leaders" type="button" class="selected">
-            <img src="img/idon9.svg" width="24px" height="24px">
+            <img src="./img/idon9.svg" width="24px" height="24px">
             <span>Leaders in DevOps</span>
           </button>
           <button id="tab-research" type="button" class>
-            <img src="img/icon10.svg" width="24px" height="24px">
+            <img src="./img/icon10.svg" width="24px" height="24px">
             <span>Industry Analys Research</span>
           </button>
         </div>
@@ -567,14 +567,14 @@
 
           </div>
           <div class="badge-cards">
-            <img src="img/L1.svg" width="96px" height="122px">
-            <img src="img/L2.svg" width="96px" height="122px">
-            <img src="img/L3.svg" width="96px" height="122px">
-            <img src="img/L4.svg" width="96px" height="122px">
-            <img src="img/L5.svg" width="96px" height="122px">
-            <img src="img/L6.svg" width="96px" height="122px">
-            <img src="img/L7.svg" width="96px" height="122px">
-            <img src="img/L8.svg" width="96px" height="122px">
+            <img src="./img/L1.svg" width="96px" height="122px">
+            <img src="./img/L2.svg" width="96px" height="122px">
+            <img src="./img/L3.svg" width="96px" height="122px">
+            <img src="./img/L4.svg" width="96px" height="122px">
+            <img src="./img/L5.svg" width="96px" height="122px">
+            <img src="./img/L6.svg" width="96px" height="122px">
+            <img src="./img/L7.svg" width="96px" height="122px">
+            <img src="./img/L8.svg" width="96px" height="122px">
           </div>
           <a></a>
         </div>
@@ -595,7 +595,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">Ebook</p>
                   </div>
-                  <img src="img/v1.png" class="resources-block__image slp-my-24">
+                  <img src="./img/v1.png" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">Beginner's Guide to DevOps
                   </h3>
                 </div>
@@ -613,7 +613,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">Topic</p>
                   </div>
-                  <img src="img/V2.png" class="resources-block__image slp-my-24">
+                  <img src="./img/V2.png" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">What is CI/CD?
                   </h3>
                 </div>
@@ -631,7 +631,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">Report</p>
                   </div>
-                  <img src="img/v3.jpeg" class="resources-block__image slp-my-24">
+                  <img src="./img/v3.jpeg" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">2022 Global DevSecOps Survey
                   </h3>
                 </div>
@@ -649,7 +649,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">BLOG POST</p>
                   </div>
-                  <img src="img/v4.png" class="resources-block__image slp-my-24">
+                  <img src="./img/v4.png" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">Comply with NIST's secure software supply chain framework with GitLab
 
                   </h3>
@@ -668,7 +668,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">PARTNERS</p>
                   </div>
-                  <img src="img/v5.png" class="resources-block__image slp-my-24">
+                  <img src="./img/v5.png" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">Discover the benefits of GitLab on AWS
                   </h3>
                 </div>
@@ -686,7 +686,7 @@
 
                     <p class="resources-block__type slp-text-all-caps">RELEASE</p>
                   </div>
-                  <img src="img/v6.png" class="resources-block__image slp-my-24">
+                  <img src="./img/v6.png" class="resources-block__image slp-my-24">
                   <h3 class="slp-text-body1">GitLab 15.7 released with GitLab CLI and Browser-Based DAST GA
 
                   </h3>
@@ -955,7 +955,7 @@
 
 
 
-  <script src="/style.js"></script>
+  <script src="./style.js"></script>
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
 </body>
 
