--- a/landing_Page/index.html
+++ b/landing_Page/index.html
@@ -118,7 +118,7 @@
                 <div class="nav-dropdown__left-side__container">
                   <div class="nav-dropdown-categories">
                     <div class="nav-dropdown-cate-list">
-                      <div class="nav-dropdown-list-title">By use case</div>
+                      <div class="nav-dropdown-list-title">Get start</div>
                       <div class="nav-dropdown-item">Digital transformation </div>
                       <div class="nav-dropdown-item">Security and governance </div>
                       <div class="nav-dropdown-item">Automated software delivery </div>
@@ -128,7 +128,7 @@
                   </div>
                   <div class="nav-dropdown-categories">
                     <div class="nav-dropdown-cate-list">
-                      <div class="nav-dropdown-list-title">By use case</div>
+                      <div class="nav-dropdown-list-title">Get start</div>
                       <div class="nav-dropdown-item">Digital transformation </div>
                       <div class="nav-dropdown-item">Security and governance </div>
                       <div class="nav-dropdown-item">Automated software delivery </div>
