--- a/landing_Page/index.html
+++ b/landing_Page/index.html
@@ -279,6 +279,8 @@
         </iconify-icon>
 
         <a href="#" class="login"> Sign in </a>
+        <iconify-icon class="icon-afters" width="20" height="20" icon="fluent:line-horizontal-3-20-filled">
+        </iconify-icon>
       </div>
     </div>
   </div>
