--- a/co_tuong/cotuong.html
+++ b/co_tuong/cotuong.html
@@ -32,7 +32,7 @@
 
 </script>  </head>
   <body class="home"  style="padding-top:0px;">
-    <nav class="site-header  navbar navbar-expand-lg bg-danger">
+    <!-- <nav class="site-header  navbar navbar-expand-lg bg-danger">
       <a class="navbar-brand" href="#">Cờ tướng</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
        </form>
      </div>
-   </nav> 
+   </nav>  -->
  <main>
       <div class="container-fluid game px-0" itemscope itemtype="http://schema.org/Game">
         <div class="container p-3">
@@ -416,7 +416,7 @@ var positionCount;
 function getBestMove(game) {
   updateStatus();
   positionCount = 0;
-  var depth = 4;
+  var depth = 5;
   var bestMove = minimaxRoot(depth, game, true);
   return bestMove;
 }
